--- a/index.html
+++ b/index.html
@@ -3,14 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title> Diner app</title>
+  <title>Diner App</title>
+  
+  <!-- Smythe + Tailwind -->
+  <link href="https://fonts.googleapis.com/css2?family=Smythe&display=swap" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            smythe: ['"Smythe"', 'cursive'],
+            verdana: ['Verdana', 'sans-serif']
+          },
+          colors: {
+            grayText: '#8B8B8B',
+            primaryText: '#000000'
+          },
+          fontSize: {
+            base28: '28px',
+            base16: '16px'
+          }
+        }
+      }
+    }
+  </script>
 </head>
-<body class="bg-gray-100 text-gray-800 font-sans">
-<img src="header.png" alt="Header" class="mx-auto object-cover mb-4">
-<div id="container" class="max-w-md mx-auto p-4">
-  </div>
-
+<body class="bg-gray-100 text-primaryText font-smythe">
+  <img src="header.png" alt="Header" class="mx-auto object-cover mb-4">
+  <div id="container" class="max-w-md mx-auto p-4"></div>
   <script src="index.js" type="module"></script>
 </body>
 </html>
