Updated images to fit content and currency sign

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Diner App</title>
+  <title>sipNsnack App</title>
   
   <!-- Smythe + Tailwind -->
   <link href="https://fonts.googleapis.com/css2?family=Smythe&display=swap" rel="stylesheet">
@@ -30,7 +30,7 @@
   </script>
 </head>
 <body class="bg-gray-100 text-primaryText font-smythe">
-  <img src="header.png" alt="Header" class="mx-auto object-cover mb-4">
+  <img src="/images/header.png" alt="Header" class="mx-auto object-cover mb-4">
   <div id="container" class="max-w-md mx-auto p-4"></div>
   <script src="index.js" type="module"></script>
 </body>
